<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar_layout" />


	<TextView
		android:id="@+id/txtFeedback"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_below="@+id/toolbar"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/edittext_bg"
		android:drawableLeft="@drawable/feedback_icon"
		android:drawableRight="@drawable/drawer_next_icon"
		android:drawablePadding="20dp"
		android:gravity="center_vertical"
		android:padding="5dp"
		android:text="@string/Feedback"
		android:textColor="@color/black"
		android:textSize="@dimen/text_size_20" />

	<TextView
		android:id="@+id/txtRatting"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_below="@+id/txtFeedback"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/edittext_bg"
		android:drawableLeft="@drawable/rate_star"
		android:drawableRight="@drawable/drawer_next_icon"
		android:drawablePadding="20dp"
		android:gravity="center_vertical"
		android:padding="5dp"
		android:text="@string/RateTheApp"
		android:textColor="@color/black"
		android:textSize="@dimen/text_size_20" />

	<TextView
		android:id="@+id/txtTermAndCondition"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_below="@+id/txtRatting"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/edittext_bg"
		android:drawableLeft="@drawable/term_conditon_icon"
		android:drawableRight="@drawable/drawer_next_icon"
		android:drawablePadding="20dp"
		android:gravity="center_vertical"
		android:padding="5dp"
		android:text="@string/TermsAndConditions"
		android:textColor="@color/black"
		android:textSize="@dimen/text_size_20" />

	<TextView
		android:id="@+id/txtDeleteAccount"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_below="@+id/txtTermAndCondition"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:drawableRight="@drawable/drawer_next_icon"
		android:background="@drawable/edittext_bg"
		android:drawableLeft="@drawable/delete_icon"
		android:drawablePadding="20dp"
		android:gravity="center_vertical"
		android:padding="5dp"
		android:text="@string/DeleteAccount"
		android:textColor="@color/black"
		android:textSize="@dimen/text_size_20" />

	<View
		android:id="@+id/view1"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/txtDeleteAccount"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginTop="8dp"
		android:background="@color/black_transparent_3" />

</RelativeLayout>
