<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar_layout" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/toolbar">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/imgEventPicture"
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:scaleType="fitXY"
				android:layout_centerHorizontal="true"
				android:src="@drawable/event_defalt_pic" />

			<RelativeLayout
				android:id="@+id/relative_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/imgEventPicture">

				<EditText
					android:id="@+id/edtEventTitle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"
					android:background="@drawable/edittext_bg"
					android:drawableLeft="@drawable/calendar_icon"
					android:drawablePadding="17dp"
					android:hint="@string/EventTitle"
					android:singleLine="true"
					android:inputType="textCapWords"
					android:textColor="@color/black"
					android:padding="5dp" />

				<View
					android:id="@+id/view1"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_below="@+id/edtEventTitle"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginTop="3dp"
					android:background="@color/black_transparent_3" />

				<TextView
					android:id="@+id/txtEventTag"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/view1"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"
					android:background="@drawable/edittext_bg"
					android:drawableLeft="@drawable/hastag_icon"
					android:drawablePadding="17dp"
					android:hint="@string/EventTags"
					android:singleLine="true"
					android:textColor="@color/black"
					android:padding="5dp" />

				<com.android.showmeeapp.util.tagcontainer.TagContainerLayout
					android:id="@+id/tagcontainerLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/txtEventTag"
					android:layout_margin="7dp"
					android:padding="10dp"
					app:container_background_color="#00000000"
					app:container_border_color="@color/theme_color"
					app:container_border_radius="1dp"
					app:container_border_width="1dp"
					app:container_enable_drag="false"
					app:horizontal_interval="10dp"
					app:tag_clickable="true"
					app:tag_theme="none"
					app:vertical_interval="10dp" />


				<View
					android:id="@+id/view2"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_below="@+id/tagcontainerLayout"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginTop="3dp"
					android:background="@color/black_transparent_3" />

				<EditText
					android:id="@+id/txtEventDescreption"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/view2"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"
					android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
					android:drawablePadding="10dp"
					android:padding="5dp"
					android:inputType="textCapSentences"
					android:background="@drawable/edittext_bg"
					android:hint="@string/Description"
					android:imeOptions="actionDone"
					android:textColor="@color/black"/>

				<View
					android:id="@+id/view3"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_below="@+id/txtEventDescreption"
					android:layout_marginTop="10dp"
					android:background="@color/bg_dark_grey" />


				<TextView
					android:id="@+id/txtGuest"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/view3"
					android:layout_marginTop="5dp"
					android:padding="10dp"
					android:text="@string/GUEST"
					android:textColor="@color/theme_color"
					android:textSize="20dp" />

				<ImageView
					android:id="@+id/imgAddGuest"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/view3"
					android:layout_centerInParent="true"
					android:layout_marginTop="5dp"
					android:layout_toRightOf="@+id/txtGuest"
					android:background="@color/light_sky_blue"
					android:padding="10dp"
					android:src="@drawable/plus_icon" />


				<TextView
					android:id="@+id/txtAtLocation"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/imgAddGuest"
					android:layout_marginLeft="15dp"
					android:layout_marginTop="5dp"
					android:layout_toLeftOf="@+id/imgCurrentLocation"
					android:drawableLeft="@drawable/location_marker"
					android:text="@string/Location" />

				<ImageView
					android:id="@+id/imgCurrentLocation"
					android:layout_width="35dp"
					android:layout_height="35dp"
					android:layout_below="@+id/imgAddGuest"
					android:layout_alignParentRight="true"
					android:layout_marginRight="10dp"
					android:layout_marginLeft="5dp"
					android:padding="5dp"
					android:src="@drawable/current_location" />

				<View
					android:id="@+id/view4"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_below="@+id/txtAtLocation"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginTop="5dp"
					android:background="@color/black_transparent_3" />

				<RelativeLayout
					android:id="@+id/relative_layout2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/view4"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginTop="5dp"
					android:padding="5dp">

					<TextView
						android:id="@+id/txtStart"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:text="@string/StarTime"
						android:textColor="@color/theme_color"
						android:textSize="@dimen/text_size_16" />

					<TextView
						android:id="@+id/txtSetStartDate"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_marginLeft="10dp"
						android:layout_toRightOf="@+id/txtStart"
						android:text="@string/Select_Date"
						android:textColor="@color/black"
						android:drawableRight="@drawable/date_icon"
						android:drawablePadding="5dp"
						android:gravity="center_vertical"
						android:textSize="@dimen/text_size_14" />

					<TextView
						android:id="@+id/txtStartTime"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_marginLeft="10dp"
						android:text="@string/Select_Time"
						android:textColor="@color/black"
						android:drawableRight="@drawable/time_icon"
						android:gravity="center_vertical"
						android:drawablePadding="2dp"
						android:textSize="@dimen/text_size_14" />


				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/relative_layout3"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/relative_layout2"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:padding="5dp">

					<TextView
						android:id="@+id/txtEnd"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:text="@string/EndTime"
						android:textColor="@color/theme_color"
						android:textSize="@dimen/text_size_16" />

					<TextView
						android:id="@+id/txtSetEndDate"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_marginLeft="17dp"
						android:layout_toRightOf="@+id/txtEnd"
						android:text="@string/Select_Date"
						android:textColor="@color/black"
						android:drawableRight="@drawable/date_icon"
						android:drawablePadding="2dp"
						android:gravity="center_vertical"
						android:textSize="@dimen/text_size_14" />

					<TextView
						android:id="@+id/txtEndTime"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_marginLeft="10dp"
						android:text="@string/Select_Time"
						android:textColor="@color/black"
						android:drawableRight="@drawable/time_icon"
						android:gravity="center_vertical"
						android:drawablePadding="2dp"
						android:textSize="@dimen/text_size_14" />

				</RelativeLayout>

				<View
					android:id="@+id/view5"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_below="@+id/relative_layout3"
					android:layout_marginTop="5dp"
					android:background="@color/black_transparent_3" />

				<TextView
					android:id="@+id/txtPublicEvent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/view5"
					android:layout_centerVertical="true"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"
					android:padding="5dp"
					android:text="@string/PublicEvent"
					android:textColor="@color/theme_color"
					android:textSize="@dimen/text_size_16" />

				<ToggleButton
					android:id="@+id/toggleButtonPublicEvent"
					android:layout_width="40dp"
					android:layout_height="35dp"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/view5"
					android:layout_marginRight="15dp"
					android:background="@drawable/toggle_selector"
					android:checked="false"
					android:text=""
					android:textOff=""
					android:textOn="" />

				<View
					android:id="@+id/view6"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_below="@+id/toggleButtonPublicEvent"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginTop="5dp"
					android:background="@color/black_transparent_3" />

				<TextView
					android:id="@+id/txtInvite"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/view6"
					android:layout_centerVertical="true"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="10dp"
					android:padding="5dp"
					android:text="@string/Invite"
					android:textColor="@color/theme_color"
					android:textSize="@dimen/text_size_16" />

				<ToggleButton
					android:id="@+id/toggleButtonInviteOther"
					android:layout_width="40dp"
					android:layout_height="35dp"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/view6"
					android:layout_marginRight="15dp"
					android:background="@drawable/toggle_selector"
					android:checked="false"
					android:text=""
					android:textOff=""
					android:textOn="" />

				<Button
					android:id="@+id/btnCreate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/toggleButtonInviteOther"
					android:layout_marginTop="10dp"
					android:background="@color/theme_color"
					android:text="Create"
					android:textColor="@color/white" />

			</RelativeLayout>

		</RelativeLayout>
	</ScrollView>
</RelativeLayout>



<!--
	SUN-JUN,12 2016-->
